Allow content types without a trailing slash.
A bug was present where content types would only be negotiated when the
content type hint was immediately followed by a forward slash.

For example, the URL gopher://example.com/0/textfile.txt would retrieve
the resource /textfile.txt as type 0 (text).

However, the perfectly-valid URL gopher://example.com/0textfile.txt
would instead retrieve the resource /0textfile.txt, resulting in a file
not found error.  (The content type guesser built into this module would
have still assumed it was of type 0 due to the extension.)

This commit fixes that problem by checking for a known content type
not surrounded by forward slashes.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+VERSION 1.0.2
+Fixes a bug where the content type negotiation fails when the second
+character of the URL is not a forward slash.  For example:
+ - gopher://example.com/0/textfile.txt -> would work
+ - gopher://example.com/0textfile.txt  -> would not have worked
+
 VERSION 1.0.1
 There are no user-visible changes.  Only the documentation was updated.
 
