--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+VERSION 1.1.1
+- Fixes a bug where query strings might be erroneously detected and sent
+  to the server, causing resource lookups to fail.
+
 VERSION 1.1
 - Adds support for Gopher query strings via the $InputObject parameter.
   Previously, one would have to form their own URL with a query string.
