Add more extensions to the type guesser.
Added some old ones, some new ones, and some common ones to the
type guessing function.  However, it's still best practice for a
server operator or user to specify the type as the first letter
of the absolute path of the URL.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+NEXT VERSION
+- Add more extensions to the type guesser.
+
 VERSION 1.1.1
 - Fixes a bug where query strings might be erroneously detected and sent
   to the server, causing resource lookups to fail.
