Change type guesser to regex, propagate preferences.
The type guessers now use regular expressions rather than simple
matching.  This will hopefully simplify things as more extensions
get added in the future.

Also, helper functions did not respect Verbose and Debug preferences.
This has been corrected.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 NEXT VERSION
 - Add more extensions to the type guesser.
+- Changed the type guesser to use regular expressions.
+- Verbose and Debug preferences are now applied inside helper functions.
 
 VERSION 1.1.1
 - Fixes a bug where query strings might be erroneously detected and sent
