Allow query parameters to be specified two ways.
You may now use the -InputObject parameter along with in-URL query
parameters.  Not sure why you would, but you could.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
-NEXT VERSION
+VERSION 1.2.0
 - The non-standard gophers (Gopher + TLS) URL scheme is supported.
+- You may use query parameters in addition to -InputObject.
 - Add more extensions to the type guesser.
 - Changed the type guesser to use regular expressions.
 - Verbose and Debug preferences are now applied inside helper functions.
