--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,14 @@
+VERSION 1.3.0
+- The nonstandard sgopher and gopher+tls URL schemes are now supported,
+  and will imply the -UseSSL parameter.
+- The -TrySSL parameter has been introducted. This will attempt a secure
+  connection, but unlike -UseSSL, if a secure connection fails, it will
+  fall back to a non-secured one.  (Security-conscious users may want to
+  set this as a default parameter in their $PROFILE.)
+
 VERSION 1.2.0
-- The non-standard gophers (Gopher + TLS) URL scheme is supported.
+- The non-standard gophers (Gopher + TLS) URL scheme is supported, and
+  will imply the -UseSSL parameter.
 - You may use query parameters in addition to -InputObject.
 - Add more extensions to the type guesser.
 - Changed the type guesser to use regular expressions.
