--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+VERSION 1.3.1
+- Update conceptual help.
+
 VERSION 1.3.0
 - The nonstandard sgopher and gopher+tls URL schemes are now supported,
   and will imply the -UseSSL parameter.
