Show SecureGopher TLS version/cipher in debug stream
When using SecureGopher, the negotiated TLS version and negotiated
cipher or ciphersuite is displayed in the debug stream.

Did you know I might be the first person in the world to be viewing
and serving Gopher content over TLS 1.3?

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+VERSION 1.3.2
+- The SecureGopher TLS connection information is now shown in the debug
+  stream.
+
 VERSION 1.3.1
 - Update conceptual help.
 
