Note that server certificates are validated.
I was not aware that the .NET runtime was responsible for validating
server certificates;  the [Net.Security.SslStream] class is responsible
for it, even if I don't have to specify that.

Updated conceptual help to notice this, and abandon my custom validation
work.  Version bump, too.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 VERSION 1.3.2
 - The SecureGopher TLS connection information is now shown in the debug
   stream.
+- Updated conceptual help to note that the .NET runtime does validate a
+  server's certificate.
 
 VERSION 1.3.1
 - Update conceptual help.
