--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+VERSION 1.3.3
+More conceptual help has been added so you can learn more about Gopher,
+Gopher+, and the Gopher URI scheme.  The cmdlet itself has not changed.
+
 VERSION 1.3.2
 - The SecureGopher TLS connection information is now shown in the debug
   stream.
