--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+VERSION 2.0.0
+- PSGopher has fixed a major oversight involving content types to bring
+  it into compliance with the Gopher specification.   All types are now
+  reporting as characters instead of numbers (i.e., '1' instead of 1).
+- PSGopher now supports translations.
+- Pester tests are now included, to verify tha the module works.
+
 VERSION 1.3.3
 More conceptual help has been added so you can learn more about Gopher,
 Gopher+, and the Gopher URI scheme.  The cmdlet itself has not changed.
